# task-router

./: .gitignore  AGENTS.md  BARRON_MEMORY.md  README.md  install.sh  litellm_config.yaml  mcp_omlx.py  proxy_router.py  pyproject.toml  speckit_router.py
.claude/commands/: analyze.md  changelog.md  checklist.md  digest.md  docstring.md  export.md  i18n.md  implement-simple.md  local.md  migration.md  review-artifact.md  sdd.md  speckit-analyze.md  speckit-checklist.md  speckit-implement-simple.md  speckit-tasks.md  tasks.md  test-stub.md
.codex/prompts/: README.md  implement-simple.md  local.md  maintenance.md  openspec.md  speckit.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/scripts/bash/: update-agent-context.sh
agent-profiles/claude/: CLAUDE.md.template
agent-profiles/codex/: AGENTS.md.template
agent-profiles/codex/factories/: ai-code-governance.md  (+4 more)
agent-profiles/shared/: routing-rules.md
examples/: sample-tasks.md
scripts/: README.md  call-omlx.sh  usage-stats.sh
scripts/presets/: speckit-analyze.md  speckit-checklist.md  speckit-tasks.md
scripts/validators/: speckit-analyze.sh  speckit-checklist.sh  speckit-tasks.sh
spec-profiles/github-open-spec/: routing-rules.md
spec-profiles/github-spec-kit/: routing-rules.md
specs/: spec.md
specs/003-agent-profile-selection/: data-model.md  parity-checklist.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/task_router/: __init__.py  classifier.py  claude_client.py  cli.py  config.py  local_client.py  router.py  server.py  speckit.py  workflow.py
(+5 files in other folders)
