[project]
name = "task-router"
version = "0.1.0"
description = "Task-based routing: simple tasks → local model (oMLX), complex tasks → Claude API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "litellm[proxy]>=1.82.6",
    "mcp>=1.26.0",
]

[project.scripts]
task-router = "task_router.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
